--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,32 @@
 #player {
+  position: relative;
   width: 800px;
   height: 600px;
-  display: flex;
-  flex-direction: column;
+  background-color: #333;
 }
 
 .js-video-container {
   width: 100%;
-  height: 70%;
+  height: 100%;
 }
 
-.controls {
-  width: 100%;
-  height: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 14px;
+.js-play-button, .time-display, .js-progress {
+  position: absolute;
+  left: 20px;
+  z-index: 10;
 }
-
 .js-play-button {
-  background-color: #000;
-  color: #fff;
-  border: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  background: #888;
+  color: #000;
+  border-width: 1px;
+  border-style: hidden;
   border-radius: 4px;
   padding: 8px 16px;
   cursor: pointer;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  transition: background 0.2s;
 }
-
-.js-play-button:hover {
-  background-color: #222;
-}
-
-.time-display {
-  color: white;
-}
-
-.js-progress {
-  background-color: grey;
-  width: 100%;
-  height: 10px;
-  border-radius: 5px;
-}
-
-.js-progress-slider {
-  background-color: red;
-  height: 100%;
-  width: 0%;
-  transition: width 0.2s;
-}
+.time-display  { top: 60px; }
+.js-progress   { bottom: 40px; width: 80%; }
